@@ -475,6 +475,9 @@ C-API
 Library
 -------
 
+- Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
+  entries, consider the first one.
+
 - Issue #6630: Allow customizing regex flags when subclassing the
   string.Template class.
 
